[package]
name = "kvs"
version = "0.1.0"
authors = ["Samuel J Vanderwaal <samuel.vanderwaal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
failure = "0.1.5"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.40"
bson = "0.14.0"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
